modifiquei CafeDaManhaController.java - metodo buscarPornome() - adicionei .collect(Collectors.toList())